# set the project name
project(c-programming)

# add executables for compilation
add_executable(print-hex print-hex.c)
add_executable(io-write-file io-write-file.c)
add_executable(pointer-voidpointers pointer-voidpointers.c)
add_executable(print-hex print-hex.c)
add_executable(string-format string-format.c)
add_executable(string-memcpy string-memcpy.c)
add_executable(string-strcat string-strcat.c)
add_executable(parsing parsing.c)
add_executable(print-binary print-binary.c)
add_executable(string-despace string-despace.c)
add_executable(string-get-until string-get-until.c)
add_executable(string-strcpy string-strcpy.c)
add_executable(string-memset string-memset.c)

